# Instant-DB

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FINAL_PROJECT_REPORT.md  IMPLEMENTATION_PLAN_DETAILED.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  LICENSE  PACKAGE_README.md  README.md  RELEASE_NOTES_v1.1.0.md  SECURITY.md  benchmark_results.json  comprehensive_test_suite.py  database_optimizations.py  enhanced_documentation.md  error_recovery.py  health_monitoring.py  memory_optimizations.py  performance_comparison.py  performance_comparison_results.json  performance_monitoring.py  performance_profiler.py  production_hardening_summary.md  production_logging.py  pyproject.toml  release_validation.py  release_validation_report.json  repository_analysis.md  requirements-base.txt  requirements-windows.txt  requirements.txt  setup.py  simple_validation.py  test_results.json  validation_test.py
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  simple_benchmark.py  simple_benchmark_minimal.py
context-saves/: claude-code-mcp-setup-2025-01-23-1030.md  instant-db-debugging-2025-01-23-1922.md  instant-db-grok4-review-manus-implementation-2025-07-25-1030.md  instant-db-improvements-2025-01-23-2030.md  instant-db-security-benchmarks-metadata-fix-2025-01-23-0915.md  instant-db-update-command-implementation-2025-01-24-1445.md  instant-db-update-implementation-2025-07-25-0920.md
demo_dataset/: README.md  meeting_notes.txt  objection_handling.txt  product_features.txt  sample_pitch_deck.txt
instant_db/: __init__.py  cli.py
instant_db/core/: __init__.py  chunking.py  database.py  discovery.py  embeddings.py  graph_memory.py  metadata_filter.py  search.py
instant_db/integrations/: __init__.py  api_server.py  custom_gpt.py
instant_db/processors/: __init__.py  batch.py  document.py
instant_db/utils/: __init__.py  config.py  error_handling.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_chunking.py  test_discovery.py  test_embeddings.py  test_metadata_filter.py
